--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                         </button>
                     </div>
-                    <button id="a2hs-btn" class="hidden inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-blue-600 text-white text-sm font-medium hover:bg-blue-700 transition-colors" aria-label="Add to Home Screen">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 5v14"></path><path d="M5 12h14"></path></svg>
-                        Add to Home
-                    </button>
+                    <a href="home.html" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-blue-600 text-white text-sm font-medium hover:bg-blue-700 transition-colors" aria-label="Browse by Persona">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="7" r="4"></circle><path d="M5 21v-2a7 7 0 0 1 14 0v2"></path></svg>
+                        Browse by Persona
+                    </a>
                 </div>
             </div>
         </header>
@@ -70,19 +70,6 @@
         </div>
     </div>
 
-    <!-- iOS A2HS hint -->
-    <div id="ios-a2hs" class="hidden fixed bottom-4 left-1/2 -translate-x-1/2 z-50 max-w-sm w-[90%] bg-white border border-gray-200 shadow-xl rounded-xl p-3 text-sm">
-        <div class="flex items-start gap-2">
-            <div class="shrink-0 text-blue-600">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19V5"></path><path d="m5 12 7-7 7 7"></path></svg>
-            </div>
-            <p>To add this app to your Home Screen: tap the Share button, then choose "Add to Home Screen".</p>
-            <button id="ios-a2hs-close" class="ml-auto p-1 rounded-md hover:bg-black/5" aria-label="Close">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-            </button>
-        </div>
-    </div>
-
     <script>
         const feedContainer = document.getElementById('feed-container');
         const loader = document.getElementById('loader');
@@ -95,9 +82,6 @@
         const activeFilterWrap = document.getElementById('active-filter');
         const closeFilterBtn = document.getElementById('close-filter-btn');
         const filterLabel = document.getElementById('filter-label');
-        const a2hsBtn = document.getElementById('a2hs-btn');
-        const iosA2hs = document.getElementById('ios-a2hs');
-        const iosA2hsClose = document.getElementById('ios-a2hs-close');
 
         // --- DATA LOADING ---
         let allCategories = [];
@@ -107,11 +91,6 @@
         let isLoading = false;
         let categoryIndex = 0;
         let activeFilterTag = null;
-
-        // PWA install prompt
-        let deferredPrompt = null;
-        const isIos = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-        const isInStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
 
         // Fetch data.json and config.json
         async function loadData() {
@@ -309,33 +288,6 @@
         overlayBg.addEventListener('click', closeMenu);
         closeFilterBtn.addEventListener('click', clearFilter);
 
-        // A2HS
-        window.addEventListener('beforeinstallprompt', (e) => {
-            e.preventDefault();
-            deferredPrompt = e;
-            if (!isIos && !isInStandalone) {
-                a2hsBtn.classList.remove('hidden');
-            }
-        });
-        a2hsBtn.addEventListener('click', async () => {
-            if (isIos) {
-                showIosA2HS();
-                return;
-            }
-            if (!deferredPrompt) return;
-            deferredPrompt.prompt();
-            const { outcome } = await deferredPrompt.userChoice;
-            if (outcome === 'accepted') {
-                a2hsBtn.classList.add('hidden');
-            }
-            deferredPrompt = null;
-        });
-        function showIosA2HS() {
-            iosA2hs.classList.remove('hidden');
-            setTimeout(() => iosA2hs.classList.add('hidden'), 7000);
-        }
-        iosA2hsClose.addEventListener('click', () => iosA2hs.classList.add('hidden'));
-
         // Initial load
         window.onload = async () => {
             // Unregister any existing service worker to rely on browser's default caching
@@ -351,10 +303,18 @@
                 }
             }
             await loadData();
-            renderAllInitial();
-            // Show A2HS button for iOS as hint
-            if (isIos && !isInStandalone) {
-                a2hsBtn.classList.remove('hidden');
+            
+            // Check for URL parameters
+            const urlParams = new URLSearchParams(window.location.search);
+            const personaParam = urlParams.get('persona');
+            const categoryParam = urlParams.get('category');
+            
+            if (personaParam) {
+                setActiveFilter(personaParam);
+            } else if (categoryParam) {
+                setActiveFilter(categoryParam);
+            } else {
+                renderAllInitial();
             }
         };
 
