--- a/home.html
+++ b/home.html
@@ -17,14 +17,19 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-    <div class="container mx-auto max-w-3xl px-4 py-4 md:py-6">
-        <header class="mb-6">
+    <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
+    <div class="container mx-auto max-w-3xl px-4 py-3 md:py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2">
                     <button id="menu-btn" class="p-2 -m-2 rounded-lg hover:bg-black/5" aria-label="Open menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                     </button>
-                    <h1 class="text-xl md:text-2xl font-bold">Top Sites</h1>
+                    <div>
+                        <h1 id="main-heading" class="text-xl md:text-2xl font-bold">
+                            <span class="bg-gradient-to-r from-blue-600 to-sky-400 text-transparent bg-clip-text">TOP5X</span><span class="text-gray-400">.net</span>
+                        </h1>
+                        <p class="text-sm text-gray-600">Discover top websites.</p>
+                    </div>
                 </div>
                 <div class="flex items-center gap-3">
                     <a href="index.html" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-blue-600 text-white text-sm font-medium hover:bg-blue-700 transition-colors">
@@ -33,8 +38,11 @@
                     </a>
                 </div>
             </div>
-        </header>
 
+        </div>
+    </header>
+
+    <div class="container mx-auto max-w-3xl px-4 pt-20 md:pt-24 pb-4 md:pb-6">
         <!-- Side Drawer Menu -->
         <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden" aria-hidden="true">
             <div class="absolute inset-0 bg-black/40" id="overlay-bg"></div>
@@ -50,6 +58,7 @@
                 </nav>
             </aside>
         </div>
+
 
         <main id="personas-container" class="space-y-8">
             <!-- Category cards will be injected here by JavaScript -->
