--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-    <div class="container mx-auto max-w-3xl px-4 py-4 md:py-6">
-        <header class="mb-6">
+    <header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
+    <div class="container mx-auto max-w-3xl px-4 py-3 md:py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center gap-2">
                     <button id="menu-btn" class="p-2 -m-2 rounded-lg hover:bg-black/5" aria-label="Open menu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                     </button>
-                    <h1 id="main-heading" class="text-xl md:text-2xl font-bold">Top Sites</h1>
+                    <div>
+                        <h1 id="main-heading" class="text-xl md:text-2xl font-bold">
+                            <span class="bg-gradient-to-r from-blue-600 to-sky-400 text-transparent bg-clip-text">TOP5X</span><span class="text-gray-400">.net</span>
+                        </h1>
+                        <p class="text-sm text-gray-600">Discover top websites.</p>
+                    </div>
                 </div>
                 <div class="flex items-center gap-3">
                     <div id="active-filter" class="hidden items-center gap-2">
@@ -39,24 +44,29 @@
                     </a>
                 </div>
             </div>
-        </header>
-
-        <!-- Side Drawer Menu -->
-        <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden" aria-hidden="true">
-            <div class="absolute inset-0 bg-black/40" id="overlay-bg"></div>
-            <aside class="absolute left-0 top-0 bottom-0 w-72 max-w-[80%] bg-white shadow-xl p-4 transform -translate-x-full transition-transform" id="sidebar">
-                <div class="flex items-center justify-between mb-4">
-                    <h2 class="text-lg font-semibold">Categories</h2>
-                    <button id="close-menu-btn" class="p-2 rounded-lg hover:bg-black/5" aria-label="Close menu">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-                    </button>
-                </div>
-                <nav id="category-list" class="space-y-1 overflow-y-auto">
-                    <!-- Categories injected here -->
-                </nav>
-            </aside>
         </div>
+    </header>
 
+    <div class="container mx-auto max-w-3xl px-4 pt-20 md:pt-24 pb-4 md:pb-6">
+        <!-- Header has been moved outside this container and fixed at the top -->
+
+    <!-- Side Drawer Menu -->
+    <div id="sidebar-overlay" class="fixed inset-0 z-50 hidden" aria-hidden="true">
+        <div class="absolute inset-0 bg-black/40" id="overlay-bg"></div>
+        <aside class="absolute left-0 top-0 bottom-0 w-72 max-w-[80%] bg-white shadow-xl p-4 transform -translate-x-full transition-transform" id="sidebar">
+            <div class="flex items-center justify-between mb-4">
+                <h2 class="text-lg font-semibold">Categories</h2>
+                <button id="close-menu-btn" class="p-2 rounded-lg hover:bg-black/5" aria-label="Close menu">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+            </div>
+            <nav id="category-list" class="space-y-1 overflow-y-auto">
+                <!-- Categories injected here -->
+            </nav>
+        </aside>
+    </div>
+    
+    <div class="container mx-auto max-w-3xl px-4 pt-24 md:pt-28">
         <main id="feed-container" class="space-y-8">
             <!-- Cards will be injected here by JavaScript -->
         </main>
@@ -259,11 +269,13 @@
             if (activeFilterTag) {
                 activeFilterWrap.classList.remove('hidden');
                 filterLabel.textContent = activeFilterTag;
-                mainHeading.classList.add('hidden');
+                // Don't hide the main heading anymore
+                // mainHeading.classList.add('hidden');
             } else {
                 activeFilterWrap.classList.add('hidden');
                 filterLabel.textContent = '';
-                mainHeading.classList.remove('hidden');
+                // No need to show it since we're not hiding it
+                // mainHeading.classList.remove('hidden');
             }
         }
 
